docs: cleanup path parameter names
