# docs/swagger.json
@@ -13,7 +13,7 @@
     "host": "lp.ardapektezol.com/api",
     "basePath": "/v1",
     "paths": {
-        "/chapters/{id}": {
+        "/chapters/{chapterid}": {
             "get": {
                 "description": "Get maps from the specified chapter id.",
                 "produces": [
@@ -26,7 +26,7 @@
                     {
                         "type": "integer",
                         "description": "Chapter ID",
-                        "name": "id",
+                        "name": "chapterid",
                         "in": "path",
                         "required": true
                     }
@@ -136,7 +136,7 @@
                 }
             }
         },
-        "/games/{id}": {
+        "/games/{gameid}": {
             "get": {
                 "description": "Get chapters from the specified game id.",
                 "produces": [
@@ -149,7 +149,7 @@
                     {
                         "type": "integer",
                         "description": "Game ID",
-                        "name": "id",
+                        "name": "gameid",
                         "in": "path",
                         "required": true
                     }
@@ -305,7 +305,7 @@
                 }
             }
         },
-        "/maps/{id}/image": {
+        "/maps/{mapid}/image": {
             "put": {
                 "description": "Edit map image with specified map id.",
                 "produces": [
@@ -325,7 +325,7 @@
                     {
                         "type": "integer",
                         "description": "Map ID",
-                        "name": "id",
+                        "name": "mapid",
                         "in": "path",
                         "required": true
                     },
@@ -367,7 +367,7 @@
                 }
             }
         },
-        "/maps/{id}/leaderboards": {
+        "/maps/{mapid}/leaderboards": {
             "get": {
                 "description": "Get map leaderboards with specified id.",
                 "produces": [
@@ -380,7 +380,7 @@
                     {
                         "type": "integer",
                         "description": "Map ID",
-                        "name": "id",
+                        "name": "mapid",
                         "in": "path",
                         "required": true
                     },
@@ -425,7 +425,7 @@
                 }
             }
         },
-        "/maps/{id}/record": {
+        "/maps/{mapid}/record": {
             "post": {
                 "description": "Post record with demo of a specific map.",
                 "consumes": [
@@ -441,7 +441,7 @@
                     {
                         "type": "integer",
                         "description": "Map ID",
-                        "name": "id",
+                        "name": "mapid",
                         "in": "path",
                         "required": true
                     },
@@ -512,7 +512,7 @@
                 }
             }
         },
-        "/maps/{id}/summary": {
+        "/maps/{mapid}/summary": {
             "get": {
                 "description": "Get map summary with specified id.",
                 "produces": [
@@ -525,7 +525,7 @@
                     {
                         "type": "integer",
                         "description": "Map ID",
-                        "name": "id",
+                        "name": "mapid",
                         "in": "path",
                         "required": true
                     }
@@ -576,7 +576,7 @@
                     {
                         "type": "integer",
                         "description": "Map ID",
-                        "name": "id",
+                        "name": "mapid",
                         "in": "path",
                         "required": true
                     },
@@ -636,7 +636,7 @@
                     {
                         "type": "integer",
                         "description": "Map ID",
-                        "name": "id",
+                        "name": "mapid",
                         "in": "path",
                         "required": true
                     },
@@ -696,7 +696,7 @@
                     {
                         "type": "integer",
                         "description": "Map ID",
-                        "name": "id",
+                        "name": "mapid",
                         "in": "path",
                         "required": true
                     },
@@ -1048,7 +1048,7 @@
                 }
             }
         },
-        "/users/{id}": {
+        "/users/{userid}": {
             "get": {
                 "description": "Get profile page of another user.",
                 "consumes": [
@@ -1064,7 +1064,7 @@
                     {
                         "type": "integer",
                         "description": "User ID",
-                        "name": "id",
+                        "name": "userid",
                         "in": "path",
                         "required": true
                     }
